# partial-commander

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
src/: app.rs  cwd.rs  main.rs  ui.rs
