[package]
name = "partial-commander"
description = "A simple console based directory tree navigator"
version = "0.1.0"
authors = ["akosnad"]
edition = "2018"

[[bin]]
name = "pc"
path = "src/main.rs"

[dependencies]
crossterm = "0.21"
tui = { version = "0.16", default-features = false, features = ['crossterm']}
argh = "0.1"
content_inspector = "0.2"
itertools = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winuser"]}